# openai-ergonomic

./: .clippy.toml  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AUTOMATION_AGENTS.md  AUTOMATION_GUIDE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LANGFUSE_FIX_NEEDED.md  LANGFUSE_INTEGRATION.md  LICENSE-APACHE  LICENSE-MIT  MIDDLEWARE_REFACTOR_PLAN.md  MIDDLEWARE_REFACTOR_STATUS.md  Makefile.toml  PLAN.md  README.md  REFACTORING_STATUS.md  RENOVATE_ANALYSIS.md  SECURITY.md  TODO.md  agents.md  codecov.yml  deny.toml  fix_client.py  refactor_client_complete.py  release-plz.toml  remove_interceptors.py  renovate.json5  rustfmt.toml  tarpaulin.toml
.githooks/: pre-commit
.github/: CODEOWNERS  dependency-review-config.yml  settings.yml
.github/workflows/: ci.yml  dependencies.yml  release-plz.yml  release.yml  security.yml
docs/: api-coverage.md  architecture.md  conversation_state.md  examples-index.md  getting-started.md  langfuse-integration.md  multi_turn_tool_ux_design.md  roadmap.md  tool_framework.md  unified_tool_framework_design.md  workflow.md
docs/design/: api_surface.md  builder_patterns.md  response_patterns.md
docs/guides/: migrating_from_builders.md  responses_workflows.md  tool_orchestration.md  vector_store_operations.md  vector_store_rag.md
docs/research/: example_alignment.md  example_decisions.md  example_gaps.md  examples_analysis.md  openai_builders.md  openai_builders_tasks.md  openai_builders_todo_sweep.md  openai_client_base_capabilities.md  repo_scaffolding.md
docs/workflow/: publish_checklist.md
docs/workflow/agents/: README.md  api_designer.md  docs.md  qa.md  release.md  reviewer_driver.md  scaffolder.md  support.md
examples/: assistants_basic.rs  assistants_code_interpreter.rs  assistants_file_search.rs  audio_speech.rs  audio_transcription.rs  auth_patterns.rs  azure_comprehensive.rs  azure_openai.rs  batch_processing.rs  caching_strategies.rs  chat_comprehensive.rs  chat_streaming.rs  completions.rs  conversation_state.rs  embeddings.rs  error_handling.rs  files.rs  fine_tuning.rs  http_middleware_retry.rs  images_comprehensive.rs  interceptor_logging.rs  langfuse.rs  langfuse_simple.rs  langfuse_streaming.rs  middleware_patterns.rs  models.rs  moderations.rs  opentelemetry.rs  opentelemetry_standard.rs  quickstart.rs  responses_comprehensive.rs  responses_streaming.rs  retry_patterns.rs  structured_outputs.rs  telemetry_langfuse.rs  testing_patterns.rs  threads.rs  token_counting.rs  tool_calling.rs  tool_calling_multiturn.rs  (+8 more)
scripts/: README.md  check-attribution.sh  check-msrv.sh  clean-attribution-history.sh  install-hooks.sh  pre-release.sh
src/: azure_middleware.rs  client.rs  client.rs.bak.29799  config.rs  conversation.rs  errors.rs  interceptor.rs  langfuse_interceptor.rs  lib.rs  middleware.rs  opentelemetry_interceptor.rs  semantic_conventions.rs  streaming.rs  telemetry.rs  telemetry_interceptor.rs  test_utils.rs  tool_framework.rs
src/builders/: assistants.rs  audio.rs  batch.rs  chat.rs  completions.rs  embeddings.rs  files.rs  fine_tuning.rs  images.rs  mod.rs  models.rs  moderations.rs  responses.rs  threads.rs  uploads.rs  usage.rs  vector_stores.rs
src/middleware/: langfuse.rs  mod.rs  opentelemetry.rs
src/responses/: assistants.rs  audio.rs  batch.rs  chat.rs  embeddings.rs  files.rs  fine_tuning.rs  images.rs  mod.rs  moderations.rs  threads.rs  uploads.rs  vector_stores.rs
tests/: assistants_client.rs  batch_integration_tests.rs  builder_integration_tests.rs  completions_integration_tests.rs  error_handling_tests.rs  files_integration_tests.rs  fine_tuning_integration_tests.rs  images_client.rs  integration_tests.rs  interceptor_integration_test.rs  interceptor_tests.rs  langfuse_interceptor_tests.rs  mock_integration_tests.rs  models_integration_tests.rs  moderations_integration_tests.rs  opentelemetry_interceptor_tests.rs  response_integration_tests.rs  streaming_integration_tests.rs  telemetry_integration_tests.rs  threads_integration_tests.rs  uploads_client.rs  uploads_integration_tests.rs  usage_integration_tests.rs  vector_stores_integration_tests.rs
tests/fixtures/: chat_completions.json  embeddings.json  models.json
tests/harness/: assertions.rs  fixtures.rs  mock_client.rs  mod.rs
tests/integration/: mock_server_tests.rs  mod.rs
tests/smoke/: mod.rs
