[package]
name = "openai-ergonomic"
version = "0.2.0"
authors = ["Tim Van Wassenhove <github@timvw.be>"]
edition = "2021"
rust-version = "1.82"
description = "Ergonomic Rust wrapper for OpenAI API"
documentation = "https://docs.rs/openai-ergonomic"
readme = "README.md"
homepage = "https://github.com/genai-rs/openai-ergonomic"
repository = "https://github.com/genai-rs/openai-ergonomic"
license = "MIT OR Apache-2.0"
keywords = ["openai", "api", "ai", "gpt", "assistant"]
categories = ["api-bindings", "asynchronous"]
exclude = [".github", "docs/", ".gitignore"]

[dependencies]
openai-client-base = "0.3"
bon = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
futures = "0.3"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
bytes = "1.5"
tokio-stream = { version = "0.1", features = ["io-util"] }
mockito = { version = "1.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
pretty_assertions = "1.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.5"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls-vendored"]
test-utils = ["mockito"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
